Use @debian.org.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ librement (0) unstable; urgency=low
 
   * (No changelog)
 
- -- Chris Lamb <chris@lambynet.co.uk>  Sun, 25 Mar 2012 18:02:00 +0100
+ -- Chris Lamb <lamby@debian.org>  Sun, 25 Mar 2012 18:02:00 +0100
