Add copyright and license notices to all Python files
We're following the recommendations of the Software Freedom Law Center:
http://softwarefreedom.org/resources/2012/ManagingCopyrightInformation.html

We're acknowledging that up-to-now all the intellectual property
of Librement is owned by Freexian SARL.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,6 @@
-Raphaël Hertzog <raphael@freexian.com>
+Copyright 2012 Freexian SARL
+Copyright 2012 Raphaël Hertzog <raphael@freexian.com>
+
+Thank you also to the following contributors:
+
+    Chris Lamb <lamby@debian.org>
